--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kites-ftp-client",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Cross-platform desktop FTP client for Windows and Mac",
     "main": "main.js",
     "scripts": {
@@ -44,8 +44,9 @@
     },
     "dependencies": {
         "basic-ftp": "^5.0.5",
+        "chokidar": "^4.0.3",
         "electron-store": "^8.2.0",
-        "split.js": "^1.6.5",
-        "electron-updater": "^6.3.9"
+        "electron-updater": "^6.3.9",
+        "split.js": "^1.6.5"
     }
 }
